[metadata]
name = EdistribucionAPI
version = 0.5.0
author = trocotronic
description = API para e-distribución (Endesa distribución)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trocotronic/edistribucion
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    bs4
    requests
    python-dateutil

[options.packages.find]
where = src

[flake8]
select = E711,E712,E901,F822,F823,W191,W292,W391
max-line-length = 120
exclude = .git,.eggs,__pycache__,build,dist,venv
max-complexity = 11
